fix: logo width on mobile

--- a/assets/app.css
+++ b/assets/app.css
@@ -23,7 +23,7 @@
 
 :root {
   --logo-width: 100px;
-  --mobile-logo-width: 85px;
+  --mobile-logo-width: 30px;
   --font-mono: "Roboto Mono";
 }
 
